--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "mongoose": "^8.1.1",
     "morgan": "^1.10.0",
     "multer": "^1.4.4",
-    "multer-gridfs-storage": "^5.0.2"
+    "multer-gridfs-storage": "^5.0.2",
+    "nodemailer": "^6.9.9"
   }
 }
